@@ -26,6 +26,8 @@
 
 	* Remove .cvsignore files by Christopher Bratusek
 
+	* lisp/sawfish/wm/viewport.jl: Keep Focus on move-window- direction by
+	Mark Schreiber.
 
 2008-07-29  Christopher Bratusek <nano-master@gmx.de>
 	* po/make-pot: make this script work again
